2009-01-18  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.h (lpatom_cmp): added.

2009-01-15  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblputil.c (lputil_splitstr_destroy): fixed segfault.

	* lib/liblpatom.c (lpatom_parse): redone most of it, can be marked
	as stable now.

	(lpatom_version_explode): added.

	* lib/liblpatom.h (lpatom_t): added member ver_ex (a int array
	which holds the exploded version string.

	(lpatom_version_cmp): added.

	* lib/liblputil.h (lputil_splitstr_destroy): added.

	(lputil_strndup): added.

2009-01-14  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.h (lpatom_get_version): added.

	* lib/liblpatom.c (lpatom_suf_t): sufv member added.
	(LPATOM_RE_SUFV): added.
	(lpatom_suffix_parse): does now add sufv too.

	* lib/liblputil.c (lputil_intlen): added

	* lib/liblpatom.c (lpatom_parse_version): deleted.
	(lpatom_parse): does now directly store the version string in the
	struct.

	* lib/liblpatom.h (lpatom_t): changed ver to nul terminated
	C-String.

2009-01-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c (lpatom_suffe_to_string): added
	(lpatom_get_suffix): changed to use lpatom_suffe_to_string()

2009-01-09  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/Makefile: modified to produce propperly linked dynamic objects

2009-01-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblputil.h: added comments

	* lib/liblpatom.h: added comments

	* lib/liblpatom.c renamed REGEXP defines
	(lpatom_init): does now also do the allocation.
	(lpatom_suffix_init): does now also do the allocation.
	(__lpatom_parse_suffix): fixed segv
	
	* lib/liblpxpak.h: added lpxpak_get

	* lib/liblpxpak.c (lpxpak_get): added

	* lib/liblputil.h: added comments.
	(lputil_substr): renamed parameter oes to off and oe to len.

	* Changelog: started logging to a Changelog

	* lib/Makefile: cleaned it up and made check-syntax CFLAG aware

	* Makefile: added some variables
